fixed weird margin thing i put in thinking it was good, and the annoying missing space on the course page for assignment due date

--- a/devU-client/src/components/pages/homePage/homePage.scss
+++ b/devU-client/src/components/pages/homePage/homePage.scss
@@ -28,7 +28,6 @@
     display: flex;
     flex-direction: row;
     gap: 20px;
-    margin-bottom: 10px;
 }
 
 .courseCard {
